[metadata]
name = ironic-prometheus-exporter
summary = Prometheus Exporter for Ironic Hardware Sensor data
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/ironic-prometheus-exporter
license = Apache-2
python_requires = >=3.6
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    ironic_prometheus_exporter

[entry_points]
oslo.messaging.notify.drivers =
    prometheus_exporter = ironic_prometheus_exporter.messaging:PrometheusFileDriver
    file_exporter = ironic_prometheus_exporter.messaging:SimpleFileDriver
