[metadata]
name = ironic-prometheus-exporter
summary = Prometheus Exporter for Ironic Hardware Sensor data
description_file = README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/ironic-prometheus-exporter
license = Apache-2
python_requires = >=3.10
classifier =
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    ironic_prometheus_exporter

[entry_points]
oslo.messaging.notify.drivers =
    prometheus_exporter = ironic_prometheus_exporter.messaging:PrometheusFileDriver
    file_exporter = ironic_prometheus_exporter.messaging:SimpleFileDriver

[codespell]
quiet-level = 4
# Words to ignore:
# assertIn: Python's unittest method
# sufix: A dictionary key associated with a string value
# Pres: Identifier key in payload data
ignore-words-list = assertIn,sufix,Pres
